...
          '${foodItem.productName} x ${foodItem.quantity}',
          style: TextStyle(fontWeight: FontWeight.bold),
        ),
        subtitle: Row(
          children: [
            Text(
              foodItem.status == 'consumed' ? 'Consumed' : 'Discarded',
              style: TextStyle(
                color:
                    foodItem.status == 'consumed' ? Colors.green : Colors.red,
                fontWeight: FontWeight.bold,
              ),
            ),
...
