...
                  ),
                  padding: const EdgeInsets.symmetric(horizontal: 12),
                  child: DropdownButtonHideUnderline(
                    child: DropdownButton<String>(
                      isExpanded: true,
                      value: _selectedReason,
                      hint: Text('Select reason'),
                      onChanged: (newValue) {
                        setState(() {
                          _selectedReason = newValue;
                          _errorMessage = null;
                        });
                      },
...
            } else {
              setState(() {
                _errorMessage = 'Please provide a reason and select a quantity';
              });
            }
          },
          child: const Text("Submit"),
          style: ElevatedButton.styleFrom(
            foregroundColor: Colors.white,
            backgroundColor: Theme.of(context).primaryColor,
            shape: RoundedRectangleBorder(
              borderRadius: BorderRadius.circular(8),
            ),
...
